--- a/themes/raditian-free-hugo-theme-data-science/layouts/partials/head.html
+++ b/themes/raditian-free-hugo-theme-data-science/layouts/partials/head.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-<!-- Google Tag Manager -->
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Params.googleAnalyticsID }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,8 +10,7 @@
 
   gtag('config', '{{ .Site.Params.googleAnalyticsID }}');
 </script>
-<!-- End Google Tag Manager -->
-
+<!-- End Google Analytics -->
 <!-- endinject -->
 <title>{{ .Site.Data.homepage.head.title }}</title>
 <style>
